Fix SecurityConfig CORS syntax